# wallert

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md
src/: main.rs  websockets.rs
