[package]
name = "wallert"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dependencies]
anyhow = "^1.0.86"
derive-new = "^0.6.0"
tokio = { version = "^1.37.0", features = ["full"] }
