[package]
name = "wallert"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["derive-new", "anyhow", "serde", "tokio"]

#? still not sure if these do anything
[lints.clippy]
get_first = "allow"
len_zero = "allow"

[dependencies]
anyhow = "^1.0.86"
derive-new = "^0.6.0"
futures-util = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.8.3"
tokio = { version = "^1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
url = "2.5.2"
